--- a/Samples/Advanced_OpenGL/Instancing/AsteroidField_Slow/AsteroidField_Slow.csproj
+++ b/Samples/Advanced_OpenGL/Instancing/AsteroidField_Slow/AsteroidField_Slow.csproj
@@ -33,15 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="OpenTK, Version=3.1.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\OpenTK.3.1.0\lib\net20\OpenTK.dll</HintPath>
-    </Reference>
-    <Reference Include="OpenTK.GLControl, Version=3.1.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\OpenTK.GLControl.3.1.0\lib\net20\OpenTK.GLControl.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -61,10 +56,19 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Mesh.cs" />
     <Compile Include="MessageFilter.cs" />
+    <Compile Include="Model.cs" />
+    <Compile Include="ObjLoader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResourcesHelper.cs" />
     <Compile Include="Shader.cs" />
+    <Compile Include="SimpleMesh.cs" />
+    <Compile Include="StaticHelpers.cs" />
+    <Compile Include="Texture.cs" />
+    <Compile Include="TriangleInfo.cs" />
+    <Compile Include="VertexInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -78,6 +82,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="models\planet.zip" />
+    <EmbeddedResource Include="models\rock.zip" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -87,15 +93,13 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <EmbeddedResource Include="shaders\6.1.skybox.fs" />
-    <EmbeddedResource Include="shaders\6.1.skybox.vs" />
-    <EmbeddedResource Include="shaders\6.1.cubemaps.fs" />
+    <EmbeddedResource Include="shaders\10.2.instancing.fs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="shaders\6.1.cubemaps.vs" />
+    <EmbeddedResource Include="shaders\10.2.instancing.vs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="textures\skybox\back.jpg" />
