--- a/Samples/Advanced_OpenGL/Instancing/TilesInstancing/TilesInstancing.csproj
+++ b/Samples/Advanced_OpenGL/Instancing/TilesInstancing/TilesInstancing.csproj
@@ -88,6 +88,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <EmbeddedResource Include="shaders\10.1.instancing.vs" />
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
