asteroid field (final iteration)

--- a/Samples/Advanced_OpenGL/Instancing/AsteroidField_Slow/AsteroidField_Slow.csproj
+++ b/Samples/Advanced_OpenGL/Instancing/AsteroidField_Slow/AsteroidField_Slow.csproj
@@ -96,6 +96,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <EmbeddedResource Include="shaders\10.2.instancing.fs" />
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
