--- a/Samples/Advanced_OpenGL/Instancing/AsteroidField/AsteroidField.csproj
+++ b/Samples/Advanced_OpenGL/Instancing/AsteroidField/AsteroidField.csproj
@@ -97,6 +97,7 @@
     <EmbeddedResource Include="shaders\10.3.asteroids.vs" />
     <EmbeddedResource Include="shaders\10.3.planet.fs" />
     <EmbeddedResource Include="shaders\10.3.planet.vs" />
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
