--- a/Breakout/Breakout.csproj
+++ b/Breakout/Breakout.csproj
@@ -78,8 +78,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="models\planet.zip" />
-    <EmbeddedResource Include="models\rock.zip" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -100,6 +98,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="textures\awesomeface.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="models\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
