--- a/Breakout/Breakout.csproj
+++ b/Breakout/Breakout.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BallObject.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="Camera_Movement.cs" />
     <Compile Include="Form1.cs">
