--- a/Breakout/Breakout.csproj
+++ b/Breakout/Breakout.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{47E3C50B-EB4D-45FF-8EEE-CF4180E7110B}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>NormalMapping</RootNamespace>
-    <AssemblyName>NormalMapping</AssemblyName>
+    <RootNamespace>Breakout</RootNamespace>
+    <AssemblyName>Breakout</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -60,6 +60,8 @@
     <Compile Include="GameLevel.cs" />
     <Compile Include="GameObject.cs" />
     <Compile Include="GameState.cs" />
+    <Compile Include="Particle.cs" />
+    <Compile Include="ParticleGenerator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceManager.cs" />
@@ -92,6 +94,8 @@
     </Compile>
     <EmbeddedResource Include="shaders\sprite.frag" />
     <None Include="README.md" />
+    <EmbeddedResource Include="shaders\particle.frag" />
+    <EmbeddedResource Include="shaders\particle.vs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -113,6 +117,9 @@
     <EmbeddedResource Include="textures\block.png" />
     <EmbeddedResource Include="textures\block_solid.png" />
     <EmbeddedResource Include="textures\paddle.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="textures\particle.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
