--- a/Samples/Lighting/Multiple lights/MultipleLights.csproj
+++ b/Samples/Lighting/Multiple lights/MultipleLights.csproj
@@ -93,6 +93,9 @@
     <EmbeddedResource Include="textures\container2_specular.png" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="OpenTK">
+      <Version>3.3.3</Version>
+    </PackageReference>
     <PackageReference Include="OpenTK.GLControl">
       <Version>3.3.3</Version>
     </PackageReference>
